minor fix to title overlapping body

--- a/src/components/Boxes.css
+++ b/src/components/Boxes.css
@@ -12,7 +12,7 @@
   
   .header {
     /* background: tomato; */
-    height: 50px;
+    height: 100px;
     font-size: 2em;
   }
   
